added @AnnotatedBy injection method